[R] Minor changes for ease of building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,25 @@
 cmake_minimum_required(VERSION 3.10)
 project(mirena_consensus)
 
+
+set(CMAKE_BUILD_TYPE Debug) # ???
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(tf2 REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(mirena_common REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 
-include_directories(src)
-
-link_directories(${PCL_LIBRARY_DIRS})
-add_definitions(${PCL_DEFINITIONS})
-
+include_directories(
+  src
+  ${tf2_geometry_msgs_INCLUDE_DIRS}  
+)
 
 add_executable(mirena_consensus
 src/mirena_consensus.cpp
@@ -25,6 +29,9 @@ src/ekf_scheduler.cpp
 
 ament_target_dependencies(mirena_consensus
     rclcpp
+    tf2
+    tf2_ros
+    tf2_geometry_msgs
     sensor_msgs
     mirena_common
 )
@@ -34,3 +41,4 @@ install(TARGETS mirena_consensus
 )
 
 ament_package()
+
